[tool.poetry]
name = "repl_python3_Examen12Mayo"
version = "0.1.0"
description = ""
authors = ["paulaanb <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^37.0.2"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
